@@ -17,6 +17,7 @@ The following bugs are resolved with this release:
   [28357] deadlock between pthread_create and ELF constructors
   [28361] nptl: Avoid setxid deadlock with blocked signals in thread exit
   [28407] pthread_kill assumes that kill and tgkill are equivalent
+  [28340] ld.so crashes while loading a DSO with a read-only dynamic section
 
 
 Version 2.34
